--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                 android:textColor="#5D4037" />
 
             <Button
-                android:id="@+id/btn_restaurants"
+                android:id="@+id/btn_parks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
@@ -111,6 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
 
     <LinearLayout
         android:orientation="horizontal" android:layout_width="match_parent"
